--- a/package.json
+++ b/package.json
@@ -1,21 +1,16 @@
 {
-  "name": "monitoring",
-  "version": "1.0.0",
-  "description": "",
-  "main": "alarms.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
+    "@vercel/node": "^2.15.3",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "firebase-admin": "^13.3.0",
-    "puppeteer-core": "^24.8.1",
     "twilio": "^5.6.0"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
